# minimize

./: .gitignore  CMakeLists.txt
headers/: derivate.hpp  grad_minimize.hpp  junk  minimize_1d.hpp  operations.hpp  ranges copy 2.hpp  ranges copy.hpp  ranges.hpp
test/: CMakeLists.txt  derivate.cpp  minimize_1d.cpp  operations.cpp  ranges.cpp  test001.cpp  test002.cpp  test003.cpp  test004.cpp
